force-app/main/default/objects/EDealer_Quarter_To_Date_FR__mdt/EDealer_Quarter_To_Date_FR__mdt.object-meta.xml
<CustomObject>
    <label>EDealer Quarter To Date FR</label>
    <pluralLabel>EDealer Quarter To Date FR</pluralLabel>
</CustomObject>