force-app/main/default/objects/EDealer_Quarter_To_Date_FR__mdt/fields/Breadth__c.field-meta.xml
<CustomField>
    <fullName>Breadth__c</fullName>
    <label>Breadth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>