force-app/main/default/objects/EDealer_Quarter_To_Date_FR__mdt/fields/Display_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Display_Order_Number__c</fullName>
    <label>Display Order Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>