force-app/main/default/objects/EDealer_Quarter_To_Date_FR__mdt/fields/EM_Fright_Discount__c.field-meta.xml
<CustomField>
    <fullName>EM_Fright_Discount__c</fullName>
    <label>EM Fright Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>