force-app/main/default/objects/EDealer_Quarter_To_Date_FR__mdt/fields/Restocking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Restocking_Fee__c</fullName>
    <label>Restocking Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>